# llminxsolver-cmp

./: .editorconfig  .gitignore  .prettierignore  Cargo.toml  LICENSE  PKGBUILD  PRIVACY_POLICY.md  README.md  build.gradle.kts  buildscript.sh  eslint.config.js  flake.nix  gradle.properties  gradlew  index.html  package.json  settings.gradle.kts  svelte.config.js  vite.config.ts
.github/: dependabot.yml  release-notes-config.json
.github/workflows/: ci.yml  coverage.yml  dependabot-ci.yml  dependabot-rebase.yml  pages.yml  pr-ci.yml  push-ci.yml  release-linux.yml  release-macos.yml  release-windows.yml  release.yml
androidApp/: build.gradle.kts  proguard-rules.pro
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/kotlin/com/llminxsolver/: MainActivity.kt
androidApp/src/main/res/values/: themes.xml
composeApp/: build.gradle.kts
composeApp/src/androidMain/kotlin/com/llminxsolver/: MainActivity.kt  MainScreen.android.kt  NativeLib.kt
composeApp/src/androidMain/kotlin/com/llminxsolver/data/: SettingsRepository.android.kt
composeApp/src/androidMain/kotlin/com/llminxsolver/platform/: MemoryMonitor.android.kt  StorageManager.android.kt
composeApp/src/androidMain/kotlin/com/llminxsolver/theme/: Theme.android.kt
composeApp/src/androidMain/kotlin/com/llminxsolver/ui/: MainScreen.android.kt
composeApp/src/androidMain/kotlin/com/llminxsolver/util/: ClipboardUtils.android.kt
composeApp/src/androidMain/res/values/: themes.xml
composeApp/src/commonMain/kotlin/com/llminxsolver/: App.kt  MainScreen.kt  NativeLib.kt
composeApp/src/commonMain/kotlin/com/llminxsolver/data/: Models.kt  Settings.kt
composeApp/src/commonMain/kotlin/com/llminxsolver/platform/: StorageManager.kt
composeApp/src/commonMain/kotlin/com/llminxsolver/theme/: Colors.kt  Theme.kt
composeApp/src/commonMain/kotlin/com/llminxsolver/ui/: AllowedFacesSelector.kt  App.kt  ControlPanel.kt  IgnoreOptions.kt  MainScreen.kt  MegaminxViewer.kt  MemoryIndicator.kt  MetricSelector.kt  ParallelConfigSelector.kt  ScoredSolutionsPanel.kt  SearchDepthSelector.kt  SearchModeSelector.kt  SolutionsPanel.kt  StatusBar.kt  StorageSettingsDialog.kt
composeApp/src/commonMain/kotlin/com/llminxsolver/viewmodel/: MegaminxViewModel.kt  SettingsViewModel.kt  SolverOperations.kt  SolverViewModel.kt
composeApp/src/commonMain/kotlin/uniffi/uniffi/llminxsolver/: llminxsolver.kt
composeApp/src/desktopMain/kotlin/com/llminxsolver/: Main.kt  MainScreen.desktop.kt  NativeLib.kt
composeApp/src/desktopMain/kotlin/com/llminxsolver/data/: SettingsRepository.kt
composeApp/src/desktopMain/kotlin/com/llminxsolver/platform/: MemoryMonitor.desktop.kt  StorageManager.desktop.kt
composeApp/src/desktopMain/kotlin/com/llminxsolver/theme/: Theme.desktop.kt
composeApp/src/desktopMain/kotlin/com/llminxsolver/ui/: MainScreen.desktop.kt
composeApp/src/desktopMain/kotlin/com/llminxsolver/util/: ClipboardUtils.desktop.kt
desktopApp/: build.gradle.kts  proguard-rules.pro
desktopApp/src/desktopMain/kotlin/com/llminxsolver/: Main.kt
gradle/: libs.versions.toml  verification-metadata.xml
llminxsolver-rs/: Cargo.toml
llminxsolver-rs/src/: coordinate.rs  data_directory.rs  lib.rs  memory_config.rs  parallel_solver.rs  pruner.rs  search_mode.rs  solver.rs  validation.rs  wallpaper.rs
llminxsolver-rs/src/batch_solver/: adjust.rs  equivalence.rs  generator.rs  mod.rs  parser.rs  solver.rs  sorting.rs  types.rs
llminxsolver-rs/src/mcc/: calculator.rs  mod.rs  parser.rs  types.rs
llminxsolver-rs/src/mcc/finger_sim/: bl_moves.rs  br_moves.rs  d_moves.rs  f_moves.rs  l_moves.rs  mod.rs  r_moves.rs  rotation_moves.rs  u_moves.rs
llminxsolver-rs/src/minx/: mod.rs  moves.rs  position.rs  state.rs
llminxsolver-rs/src/minx/transformations/: b_moves.rs  bl_moves.rs  br_moves.rs  d_moves.rs  f_moves.rs  l_moves.rs  mod.rs  r_moves.rs  u_moves.rs
llminxsolver-rs/src/util/: mod.rs  tempfile.rs  theme_gen.rs  xlsx_export.rs
llminxsolver-uniffi/: Cargo.toml  build.rs
llminxsolver-uniffi/src/: lib.rs  llminxsolver.udl  util.rs
llminxsolver-uniffi/src/batch_solver/: mod.rs  solver.rs  types.rs
llminxsolver-uniffi/src/dedicated_solver/: solver.rs  types.rs
llminxsolver-uniffi/src/solver/: mod.rs  solver.rs  types.rs
llminxsolver-wasm/: Cargo.toml
llminxsolver-wasm/src/: lib.rs
llminxsolver-wasm/src/geometry/: megaminx.rs  mod.rs
llminxsolver-wasm/src/mcc/: calculator.rs  finger_sim.rs  parser.rs  types.rs
nix/: gradle-deps.nix
shared/: build.gradle.kts
shared/src/androidMain/kotlin/com/llminxsolver/: MainScreen.android.kt  SolverScreen.android.kt
shared/src/commonMain/kotlin/com/llminxsolver/: App.kt  MainScreen.kt  NativeLib.kt  SplashScreen.kt
shared/src/desktopMain/kotlin/com/llminxsolver/: MainScreen.desktop.kt  SolverScreen.desktop.kt
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
src/lib/: index.ts
src/lib/components/: AllowedFaces.svelte  ControlPanel.svelte  DesktopLayout.svelte  IgnoreOptions.svelte  MegaminxViewer.svelte  MetricSelector.svelte  ScoredSolutionsPanel.svelte  SearchDepth.svelte  SolutionsPanel.svelte  StatusBar.svelte
src/lib/services/: tauri.ts
src/lib/stores/: megaminx.ts
src/lib/types/: megaminx.ts
src/lib/utils/: colors.ts  geometry.ts
src/routes/: +layout.svelte  +page.svelte
(+63 files in other folders)
