[workspace]
resolver = "3"
members = ["llminxsolver-rs", "llminxsolver-uniffi"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
license = "MIT"
repository = "https://github.com/Sevilze/llminxsolver-trs"

[profile.dev]
opt-level = 1

[profile.dev.package.llminxsolver-rs]
opt-level = 3
