[package]
name = "llminxsolver-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Megaminx Last Layer Solver - Rust Implementation"

[dependencies]
crossbeam-channel = "0.5"
num_cpus = "1.17"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
