[package]
name = "llminxsolver-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Megaminx Last Layer Solver - Rust Implementation"

[dependencies]
crossbeam-channel = "0.5"
material-colors = { version = "0.4", features = ["image", "serde"] }
num_cpus = "1.17"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging"
] }
