[package]
name = "llminxsolver-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Megaminx Last Layer Solver - Rust Implementation"

[dependencies]
crossbeam-channel = "0.5"
lz4_flex = "0.12"
material-colors = { version = "0.4", features = ["image", "serde"] }
num_cpus = "1.17"
rayon = "1.11"
rust_xlsxwriter = "0.93"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
  "Win32_Foundation",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }
