[package]
name = "llminxsolver-uniffi"
version.workspace = true
edition = "2024"
rust-version = "1.92.0"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "llminxsolver_uniffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
llminxsolver-rs = { path = "../llminxsolver-rs" }
uniffi = { version = "0.30", features = ["cli"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"

[build-dependencies]
uniffi = { version = "0.30", features = ["build"] }

