[package]
name = "llminxsolver-uniffi"
version.workspace = true
edition = "2024"
rust-version = "1.93.0"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]
name = "llminxsolver_uniffi"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[dependencies]
llminxsolver-rs = { path = "../llminxsolver-rs" }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
uniffi = { version = "0.31", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }
